--- a/app/src/main/res/layout/fragment_bed_overview.xml
+++ b/app/src/main/res/layout/fragment_bed_overview.xml
@@ -24,12 +24,14 @@
         android:fontFamily="@font/roboto"
         android:textSize="@dimen/font_small"
         android:id="@+id/plantable_explanation_text_view"
+        android:visibility="gone"
         android:layout_marginStart="@dimen/spacing_small"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/plantable_explanation_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bed_text_view"
         android:id="@+id/plantable_explanation_image_view"
         android:layout_marginStart="@dimen/line"/>
@@ -43,12 +45,14 @@
         android:fontFamily="@font/roboto"
         android:textSize="@dimen/font_small"
         android:id="@+id/water_explanation_text_view"
+        android:visibility="gone"
         android:layout_marginStart="@dimen/spacing_small"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/water_explanation_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/plantable_explanation_text_view"
         android:id="@+id/water_explanation_image_view"
         android:layout_marginStart="@dimen/line"/>
