--- a/app/src/main/res/layout/fragment_bed_overview.xml
+++ b/app/src/main/res/layout/fragment_bed_overview.xml
@@ -16,10 +16,10 @@
         />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/text_view"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/plantable_explanation_image_view"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/plantable_explanation_image_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bed_text_view"
         android:fontFamily="@font/roboto"
         android:textSize="@dimen/font_small"
@@ -30,17 +30,18 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/plantable_explanation_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/plantable_explanation_text_view"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bed_text_view"
         android:id="@+id/plantable_explanation_image_view"
-        android:layout_marginStart="@dimen/line"/>
+        android:layout_marginTop="@dimen/spacing_small"
+        android:layout_marginStart="@dimen/spacing_small"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/text_view"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/water_explanation_image_view"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/water_explanation_image_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/plantable_explanation_text_view"
         android:fontFamily="@font/roboto"
         android:textSize="@dimen/font_small"
@@ -51,11 +52,12 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/water_explanation_text_view"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/water_explanation_text_view"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/plantable_explanation_text_view"
         android:id="@+id/water_explanation_image_view"
-        android:layout_marginStart="@dimen/line"/>
+        android:layout_marginTop="@dimen/spacing_small"
+        android:layout_marginStart="@dimen/spacing_small"/>
 
     <GridLayout
         android:layout_width="wrap_content"
