--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -29,7 +29,7 @@
         android:name="dk.mifu.pmos.vegetablegardening.fragments.viewgarden.PlantDetailsFragment"
         android:label="PlantDetails" >
         <argument android:name="plant"
-            app:argType="dk.mifu.pmos.vegetablegardening.models.Plant" />
+            app:argType="dk.mifu.pmos.vegetablegardening.models.MyPlant" />
     </fragment>
     <dialog
         android:id="@+id/plantDetailsDialogFragment"
@@ -43,7 +43,7 @@
             app:argType="dk.mifu.pmos.vegetablegardening.models.Coordinate" />
         <argument
             android:name="plant"
-            app:argType="dk.mifu.pmos.vegetablegardening.models.Plant" />
+            app:argType="dk.mifu.pmos.vegetablegardening.models.MyPlant" />
     </dialog>
     <dialog
         android:id="@+id/choosePlantFragment"
