--- a/app/src/main/res/layout/fragment_garden_overview.xml
+++ b/app/src/main/res/layout/fragment_garden_overview.xml
@@ -19,7 +19,7 @@
         android:id="@+id/new_location_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/createGarden"
+        android:contentDescription="@string/createBed"
         android:src="@drawable/ic_plus"
         android:layout_margin="@dimen/spacing_medium"
         app:layout_constraintBottom_toBottomOf="parent"
