--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -55,5 +55,8 @@
         <argument
             android:name="predicate"
             app:argType="dk.mifu.pmos.vegetablegardening.helpers.predicates.Predicate" />
+        <argument
+            android:name="newPlant"
+            app:argType="boolean" />
     </dialog>
 </navigation>
