Clarified that bed is a bed

--- a/app/src/main/res/layout/fragment_garden_overview.xml
+++ b/app/src/main/res/layout/fragment_garden_overview.xml
@@ -6,6 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".fragments.viewgarden.GardenOverviewFragment">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/title_garden_text_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/bed_text"
+        android:textSize="@dimen/font_medium"
+        android:layout_marginTop="@dimen/spacing_small"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_garden_text_view"
+        android:text="@string/empty_garden_text"
+        android:fontFamily="@font/roboto"
+        android:textSize="@dimen/font_small"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:layout_marginTop="@dimen/spacing_small"
+        android:id="@+id/empty_garden_text_view"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gardens_recycler_view"
         android:layout_width="match_parent"
@@ -13,7 +37,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/empty_garden_text_view" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/new_location_btn"
