--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/ToolbarStyle"
-        android:elevation="4dp"
+        app:title="Bed"
         android:id="@+id/actionbar"
         />
 
