--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/ToolbarStyle"
-        android:id="@+id/actionbar"
+        android:id="@+id/toolbar_main"
         />
 
     <androidx.fragment.app.FragmentContainerView
@@ -22,7 +22,7 @@
         android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/actionbar"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph_main" />
