--- a/app/src/main/res/layout/fragment_garden_overview.xml
+++ b/app/src/main/res/layout/fragment_garden_overview.xml
@@ -21,12 +21,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title_garden_text_view"
-        android:text="@string/empty_garden_text"
         android:fontFamily="@font/roboto"
         android:textSize="@dimen/font_small"
-        android:layout_marginStart="@dimen/spacing_medium"
+        android:paddingStart="@dimen/spacing_medium"
+        android:paddingEnd="@dimen/spacing_medium"
         android:layout_marginTop="@dimen/spacing_small"
         android:id="@+id/empty_garden_text_view"/>
 
