Guide in create grid and associated layout to match how many tiles can be created

--- a/app/src/main/res/layout/fragment_garden_overview.xml
+++ b/app/src/main/res/layout/fragment_garden_overview.xml
@@ -13,20 +13,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/bed_text"
-        android:textSize="@dimen/font_medium"
-        android:layout_marginTop="@dimen/spacing_small"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_garden_text_view"
-        android:fontFamily="@font/roboto"
         android:textSize="@dimen/font_small"
         android:paddingStart="@dimen/spacing_medium"
         android:paddingEnd="@dimen/spacing_medium"
         android:layout_marginTop="@dimen/spacing_small"
-        android:id="@+id/empty_garden_text_view"/>
+        android:id="@+id/garden_text_view"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/gardens_recycler_view"
@@ -35,7 +26,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/empty_garden_text_view" />
+        app:layout_constraintTop_toBottomOf="@id/garden_text_view" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/new_location_btn"
