--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -4,13 +4,22 @@
     android:id="@+id/parent_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="@dimen/spacing_medium"
+        android:id="@+id/create_grid_guide_text_view"
+        android:text="@string/guide_create_grid_text"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_column_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/add_column_text"
         android:layout_margin="@dimen/spacing_small"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/create_grid_guide_text_view"
         app:layout_constraintStart_toStartOf="parent"
         android:src="@drawable/ic_plus"/>
 
