--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -26,10 +26,13 @@
     </fragment>
     <fragment
         android:id="@+id/plantDetails"
-        android:name="dk.mifu.pmos.vegetablegardening.fragments.viewgarden.PlantDetailsFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.PlantDetailsFragment"
         android:label="PlantDetails" >
         <argument android:name="plant"
-            app:argType="dk.mifu.pmos.vegetablegardening.models.MyPlant" />
+            app:argType="dk.mifu.pmos.vegetablegardening.models.Plant" />
+        <argument android:name="myplant"
+            app:argType="dk.mifu.pmos.vegetablegardening.models.MyPlant"
+            app:nullable="true" />
     </fragment>
     <dialog
         android:id="@+id/plantDetailsDialogFragment"
@@ -56,4 +59,12 @@
             android:name="predicate"
             app:argType="dk.mifu.pmos.vegetablegardening.helpers.predicates.Predicate" />
     </dialog>
+    <fragment
+        android:id="@+id/lexiconFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.lexicon.LexiconFragment"
+        android:label="LexiconFragment" >
+        <action
+            android:id="@+id/to_plant_details"
+            app:destination="@id/plantDetails" />
+    </fragment>
 </navigation>
