Toolbar updates in lexicon

--- a/app/src/main/res/menu/main_navigation.xml
+++ b/app/src/main/res/menu/main_navigation.xml
@@ -10,5 +10,5 @@
     <item
         android:icon="@null"
         android:id="@+id/lexiconFragment"
-        android:title="@string/plant_button_text" />
+        android:title="@string/plant_text" />
 </menu>
