--- a/app/src/main/res/layout/fragment_plant_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_plant_details_dialog.xml
@@ -12,7 +12,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/plant_details_dialog_plant"
+        android:textSize="@dimen/font_large"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/plant_details_dialog_plant"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/sort"
+        android:textSize="@dimen/font_small"
+        android:visibility="gone"/>
+
+    <TextView
+        android:layout_marginTop="@dimen/spacing_medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/sort"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/title_plants_details_dialog"
         android:text="@string/plant_details_dialog_title"
         android:textSize="@dimen/font_medium"/>
@@ -22,6 +43,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/title_plants_details_dialog"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:padding="@dimen/spacing_small"
         android:id="@+id/explanatory_text_plants_details_dialog"
         android:text="@string/plants_details_dialog_guide_text"/>
