Gridhelper now uses actual size of toolbar instead of hardcoded value

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="grid_tile">50dp</dimen>
     <dimen name="line">2dp</dimen>
     <dimen name="text_view">350dp</dimen>
+    <dimen name="toolbar">56dp</dimen>
 </resources>
