--- a/app/src/main/res/menu/main_navigation.xml
+++ b/app/src/main/res/menu/main_navigation.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
-    <item
-        android:icon="@null"
-        android:id="@+id/gardenOverviewFragment"
-        android:title="@string/bed_text" />
+    <group android:checkableBehavior="single">
+        <item
+            android:icon="@null"
+            android:id="@+id/gardenOverviewFragment"
+            android:title="@string/bed_text" />
 
-    <item
-        android:icon="@null"
-        android:id="@+id/lexiconFragment"
-        android:title="@string/plant_text" />
+        <item
+            android:icon="@null"
+            android:id="@+id/lexiconFragment"
+            android:title="@string/plant_text" />
+    </group>
 </menu>
