--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,13 @@
         <item name="android:editTextColor">@color/black</item>
         <item name="android:textColorHint">@android:color/darker_gray</item>
     </style>
+
+    <style name="Theme.VegetableGardening.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.VegetableGardening.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.VegetableGardening.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
