No longer ugly navigation drawer but white instead of our own white

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:menu="@menu/main_navigation"
+        android:theme="@style/DrawerStyle"
          />
 
 </androidx.drawerlayout.widget.DrawerLayout>
