--- a/app/src/main/res/values/navigation.xml
+++ b/app/src/main/res/values/navigation.xml
@@ -1,6 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.VegetableGardening" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="DrawerStyle" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green</item>
         <item name="colorPrimaryVariant">@color/green</item>
@@ -12,19 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="android:background">@color/white</item>
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:editTextColor">@color/black</item>
         <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="android:background">@null</item>
     </style>
-
-    <style name="Theme.VegetableGardening.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Theme.VegetableGardening.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.VegetableGardening.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
