--- a/app/src/main/res/drawable/grid_tile_normal.xml
+++ b/app/src/main/res/drawable/grid_tile_normal.xml
@@ -8,7 +8,7 @@
         android:height="@dimen/grid_tile"/>
 
     <solid
-        android:color="@color/beige"/>
+        android:color="@color/brown"/>
 
     <stroke
         android:width="@dimen/line"
