--- a/app/src/main/res/layout/fragment_edit_sort_dialog.xml
+++ b/app/src/main/res/layout/fragment_edit_sort_dialog.xml
@@ -33,9 +33,9 @@
     <Button
         android:id="@+id/cancel_button"
         android:text="@string/cancel"
-        android:backgroundTint="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/save_sort_button"
         app:layout_constraintTop_toBottomOf="@id/edit_sort_edit_text"/>
@@ -45,6 +45,7 @@
         android:text="@string/gem_sort"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/AcceptButtonStyle"
         app:layout_constraintStart_toEndOf="@id/cancel_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_sort_edit_text"/>
