--- a/app/src/main/res/layout/fragment_lexicon.xml
+++ b/app/src/main/res/layout/fragment_lexicon.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/create_plant"
         android:layout_margin="@dimen/spacing_medium"
-        style="@style/FloatingButtonStyle"
+        android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
