--- a/app/src/main/res/layout/fragment_plant_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_plant_details_dialog.xml
@@ -48,38 +48,38 @@
         android:id="@+id/explanatory_text_plants_details_dialog"
         android:text="@string/plants_details_dialog_guide_text"/>
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/water_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/spacing_small"
         android:text="@string/water_text"
         android:textSize="@dimen/font_small"
-        android:backgroundTint="@color/blue"
+        style="@style/ButtonStyle"
         app:layout_constraintEnd_toStartOf="@+id/harvest_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/explanatory_text_plants_details_dialog" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/harvest_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_small"
         android:text="@string/harvest_text"
         android:textSize="@dimen/font_small"
-        android:backgroundTint="@color/green"
+        style="@style/ButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/water_button"
         app:layout_constraintTop_toBottomOf="@id/explanatory_text_plants_details_dialog" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/details_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_small"
         android:text="@string/details_text"
         android:textSize="@dimen/font_small"
-        android:backgroundTint="@color/beige"
+        style="@style/ButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/water_button" />
