--- a/app/src/main/res/layout/fragment_specify_location.xml
+++ b/app/src/main/res/layout/fragment_specify_location.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toBottomOf="@id/specify_location_text_view"
         android:background="@null"
         android:id="@+id/outdoors_button"
-        android:src="@drawable/sun"
+        android:src="@drawable/outdoors"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:layout_height="@dimen/picture"
