--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/main_navigation"
+        app:menu="@menu/main_menu"
          />
 
 </androidx.drawerlayout.widget.DrawerLayout>
