--- a/app/src/main/res/layout/fragment_plant_details.xml
+++ b/app/src/main/res/layout/fragment_plant_details.xml
@@ -20,6 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/plant_name"
         android:layout_marginStart="@dimen/spacing_small"
+        android:animateLayoutChanges="true"
         android:id="@+id/gridlayout">
     </GridLayout>
 
