--- a/app/src/main/res/layout/fragment_plant_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_plant_details_dialog.xml
@@ -54,8 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/spacing_small"
         android:text="@string/water_text"
-        android:textSize="@dimen/font_small"
-        style="@style/ButtonStyle"
+        style="@style/SpecialButtonStyle"
         app:layout_constraintEnd_toStartOf="@+id/harvest_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/explanatory_text_plants_details_dialog" />
@@ -66,8 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_small"
         android:text="@string/harvest_text"
-        android:textSize="@dimen/font_small"
-        style="@style/ButtonStyle"
+        style="@style/SpecialButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/water_button"
         app:layout_constraintTop_toBottomOf="@id/explanatory_text_plants_details_dialog" />
@@ -78,7 +76,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_small"
         android:text="@string/details_text"
-        android:textSize="@dimen/font_small"
         style="@style/ButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
