--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -16,18 +16,24 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:editTextColor">@color/black</item>
         <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="navigationViewStyle">@style/Widget.App.NavigationView</item>
     </style>
 
     <style name="ButtonStyle">
         <item name="backgroundTint">@color/orange</item>
         <item name="background">@color/orange</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/font_small</item>
     </style>
 
-    <style name="AcceptButtonStyle">
+    <style name="AcceptButtonStyle" parent="ButtonStyle">
         <item name="backgroundTint">@color/dark_green</item>
         <item name="background">@color/dark_green</item>
-        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="SpecialButtonStyle" parent="ButtonStyle">
+        <item name="backgroundTint">@color/blue</item>
+        <item name="background">@color/blue</item>
     </style>
 
     <style name="Theme.VegetableGardening.NoActionBar">
@@ -38,4 +44,10 @@
     <style name="Theme.VegetableGardening.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.VegetableGardening.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="Widget.App.NavigationView" parent="Widget.MaterialComponents.NavigationView">
+        <item name="itemIconTint">@color/drawer_item_color</item>
+        <item name="itemTextColor">@color/drawer_item_color</item>
+        <item name="itemShapeFillColor">@color/drawer_item_background_color</item>
+    </style>
 </resources>
