--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -43,6 +43,9 @@
         <action
             android:id="@+id/edit_sort"
             app:destination="@id/editSortDialogFragment" />
+        <action
+            android:id="@+id/set_germination"
+            app:destination="@id/setGerminationDialogFragment"/>
     </fragment>
     <dialog
         android:id="@+id/plantDetailsDialogFragment"
@@ -81,6 +84,17 @@
         android:id="@+id/editSortDialogFragment"
         android:name="dk.mifu.pmos.vegetablegardening.fragments.dialogs.EditSortDialogFragment"
         android:label="EditSortDialogFragment" >
+        <argument
+            android:name="myPlant"
+            app:argType="dk.mifu.pmos.vegetablegardening.models.MyPlant" />
+        <argument
+            android:name="coordinate"
+            app:argType="dk.mifu.pmos.vegetablegardening.models.Coordinate" />
+    </dialog>
+    <dialog
+        android:id="@+id/setGerminationDialogFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.dialogs.SetGerminationDialogFragment"
+        android:label="SetGerminationDialogFragment">
         <argument
             android:name="myPlant"
             app:argType="dk.mifu.pmos.vegetablegardening.models.MyPlant" />
