--- a/app/src/main/res/layout/fragment_create_grid.xml
+++ b/app/src/main/res/layout/fragment_create_grid.xml
@@ -13,7 +13,7 @@
             android:id="@+id/add_column_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/add_column_text"
+            android:contentDescription="@string/add_column"
             android:layout_margin="@dimen/spacing_small"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
             android:id="@+id/add_row_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/add_row_text"
+            android:contentDescription="@string/add_row"
             android:layout_margin="@dimen/spacing_small"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
             android:id="@+id/remove_column_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/add_column_text"
+            android:contentDescription="@string/add_column"
             android:layout_marginTop="@dimen/spacing_small"
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/add_column_button"
@@ -44,7 +44,7 @@
             android:id="@+id/remove_row_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/add_column_text"
+            android:contentDescription="@string/add_column"
             android:layout_marginStart="@dimen/spacing_small"
             android:visibility="gone"
             app:layout_constraintTop_toTopOf="@id/add_row_button"
@@ -57,7 +57,7 @@
         android:id="@+id/save_garden_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/save_garden_text"
+        android:contentDescription="@string/save_bed"
         android:layout_marginStart="@dimen/spacing_small"
         android:layout_margin="@dimen/spacing_small"
         android:layout_alignParentBottom="true"
