--- a/app/src/main/res/layout/fragment_garden_overview.xml
+++ b/app/src/main/res/layout/fragment_garden_overview.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/empty_garden_text"
+        android:text="@string/tooltip_empty_garden"
         android:visibility="gone"
         android:padding="@dimen/spacing_small"
         android:textSize="@dimen/font_medium"
@@ -33,7 +33,7 @@
         android:id="@+id/new_location_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/create_bed"
+        android:contentDescription="@string/new_bed"
         android:src="@drawable/ic_plus"
         android:layout_margin="@dimen/spacing_medium"
         app:layout_constraintBottom_toBottomOf="parent"
