--- a/app/src/main/res/layout/fragment_edit_sort_dialog.xml
+++ b/app/src/main/res/layout/fragment_edit_sort_dialog.xml
@@ -7,7 +7,7 @@
     <TextView
         android:padding="@dimen/spacing_xsmall"
         android:textSize="@dimen/font_medium"
-        android:text="@string/edit_sort_text"
+        android:text="@string/edit_sort"
         android:id="@+id/edit_sort_text_view"
         android:textAlignment="center"
         android:layout_width="0dp"
