--- a/app/src/main/res/layout/fragment_lexicon.xml
+++ b/app/src/main/res/layout/fragment_lexicon.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacing_small"
         android:fontFamily="@font/roboto"
-        android:hint="@string/search_text"
+        android:hint="@string/search"
         android:iconifiedByDefault="false"
         android:lines="1"
         android:textSize="@dimen/font_medium"
@@ -31,7 +31,7 @@
         android:id="@+id/new_plant_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/create_plant"
+        android:contentDescription="@string/new_plant"
         android:layout_margin="@dimen/spacing_medium"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="parent"
