--- a/app/src/main/res/layout/fragment_plant_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_plant_details_dialog.xml
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/title_plants_details_dialog"
-        android:text="@string/plant_details_dialog_title"
+        android:text="@string/title_dialog_plant_details"
         android:textSize="@dimen/font_medium"/>
 
     <TextView
@@ -46,14 +46,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:padding="@dimen/spacing_small"
         android:id="@+id/explanatory_text_plants_details_dialog"
-        android:text="@string/plants_details_dialog_guide_text"/>
+        android:text="@string/guide_dialog_plant_details"/>
 
     <Button
         android:id="@+id/water_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/spacing_small"
-        android:text="@string/water_text"
+        android:text="@string/water"
         style="@style/SpecialButtonStyle"
         app:layout_constraintEnd_toStartOf="@+id/harvest_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_small"
-        android:text="@string/harvest_text"
+        android:text="@string/harvest"
         style="@style/SpecialButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/water_button"
@@ -75,7 +75,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_small"
-        android:text="@string/details_text"
+        android:text="@string/details"
         style="@style/ButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
