--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/tooltip"
-        android:title="@string/help_text"
+        android:title="@string/help"
         app:showAsAction="always"
         android:icon="@drawable/questionmark"/>
 
