Using separate toolbar for bedoverview fragment

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar_main"
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar"
-            app:menu="@menu/toolbar"
+            app:menu="@menu/toolbar_default"
             style="@style/ToolbarStyle"
             app:popupTheme="@style/Theme.VegetableGardening.PopupOverlay"
             />
