--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -26,6 +26,9 @@
         <action
             android:id="@+id/show_planting_options"
             app:destination="@id/choosePlantFragment"/>
+        <action
+            android:id="@+id/edit_bed_action"
+            app:destination="@id/createGridFragment" />
     </fragment>
     <fragment
         android:id="@+id/plantDetails"
