NewSeasonFragment.kt saving will return after making sure year not already used

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -132,5 +132,9 @@
     <fragment
         android:id="@+id/newSeasonFragment"
         android:name="dk.mifu.pmos.vegetablegardening.fragments.NewSeasonFragment"
-        android:label="NewSeasonFragment"/>
+        android:label="NewSeasonFragment" >
+        <action
+            android:id="@+id/navigate_to_beds"
+            app:destination="@id/gardenOverviewFragment"/>
+    </fragment>
 </navigation>
