KeyboardHelper now works as intended

--- a/app/src/main/res/layout/fragment_save_bed_dialog.xml
+++ b/app/src/main/res/layout/fragment_save_bed_dialog.xml
@@ -23,6 +23,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/save_bed_text_view"
         android:autofillHints=""
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:inputType="textCapWords" />
 
     <Button
