--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -142,10 +142,14 @@
     </dialog>
     <fragment
         android:id="@+id/newSeasonFragment"
-        android:name="dk.mifu.pmos.vegetablegardening.fragments.NewSeasonFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.croprotation.NewSeasonFragment"
         android:label="NewSeasonFragment" >
         <action
             android:id="@+id/navigate_to_beds"
             app:destination="@id/gardenOverviewFragment"/>
     </fragment>
+    <fragment
+        android:id="@+id/cropRotationFragment"
+        android:name="dk.mifu.pmos.vegetablegardening.fragments.croprotation.CropRotationFragment"
+        android:label="CropRotationFragment"/>
 </navigation>
